Revert "feat(platform): [FE-1089] fix ticket thread content shift (react 18 fix) back-ported to react 17 (#8331)" (#8383)
This reverts commit cca3ba7da51cb8b1d534e2193041fcc0a027c055.

--- a/src/pages/tickets/detail/components/TicketFields/TicketFields.less
+++ b/src/pages/tickets/detail/components/TicketFields/TicketFields.less
@@ -2,8 +2,7 @@
     .wrapper {
         display: flex;
         box-sizing: content-box;
-        padding: 0 var(--layout-spacing-s) var(--layout-spacing-xs)
-            var(--layout-spacing-s);
+        padding: var(--layout-spacing-xs) var(--layout-spacing-m);
         transition: height 0.2s ease-out;
         overflow-y: hidden;
     }
@@ -33,5 +32,11 @@
     .button {
         width: 83px;
         justify-content: center;
+    }
+}
+
+:global(.globalNav) :local {
+    .wrapper {
+        padding: var(--layout-spacing-xs) var(--layout-spacing-s);
     }
 }
