--- a/src/pages/tickets/detail/components/TicketView.less
+++ b/src/pages/tickets/detail/components/TicketView.less
@@ -1,72 +1,49 @@
 @import '~css/new/mixins';
 @import '~css/typography';
 
-:local {
-    .outerView {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 100;
-        height: 100%;
-        overflow: auto;
+:local .page {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 100;
+    height: 100%;
+    position: relative;
+    max-height: 100%;
+    overflow: auto;
+    background-color: var(--neutral-grey-0);
+
+    scrollbar-color: var(--neutral-grey-3) var(--neutral-grey-2);
+    scrollbar-width: thin;
+
+    &::-webkit-scrollbar-thumb {
+        visibility: initial;
     }
 
-    .view {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 100;
-        height: 100%;
-        max-height: 100%;
+    &::-webkit-scrollbar-track {
+        background-color: var(--neutral-grey-2);
     }
 
-    .page {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 100;
-        overflow: auto;
-        height: 100%;
-        max-height: 100%;
-        background-color: var(--neutral-grey-0);
-
-        scrollbar-color: var(--neutral-grey-3) var(--neutral-grey-2);
-        scrollbar-width: thin;
-
-        &::-webkit-scrollbar-thumb {
-            visibility: initial;
-        }
-
-        &::-webkit-scrollbar-track {
-            background-color: var(--neutral-grey-2);
-        }
-
-        .separator {
-            border-bottom: 1px solid var(--neutral-grey-3);
-        }
-
-        .ticketContent {
-            padding: 0 30px;
-            flex-shrink: 1;
-            flex-grow: 1;
-
-            &:focus {
-                outline: 0;
-            }
-
-            @media @mobiles {
-                padding: 0 46px;
-            }
-
-            &.historyDisplayed {
-                flex-shrink: 0;
-            }
-        }
+    .separator {
+        border-bottom: 1px solid var(--neutral-grey-3);
     }
 
+    .ticketContent {
+        padding: 0 30px;
+        flex-shrink: 1;
+        flex-grow: 1;
+
+        &:focus {
+            outline: 0;
+        }
+
+        @media @mobiles {
+            padding: 0 46px;
+        }
+
+        &.historyDisplayed {
+            flex-shrink: 0;
+        }
+    }
     .timeline {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 100;
         background: var(--neutral-grey-1);
         box-shadow: inset 0 -2px 2px
             hsla(
